# choice-annotate

./: .gitignore  HaskellLibrariesRequired.txt  README.md  choice-annotate.cabal  snapshot.yaml  stack.yaml
app/: GitEncode.hs  GitEncode1.hs  Main.hs
src/: CCEncode.hs  CCLibPat.hs  CCMerge.hs  CCTrack.hs  GitDag.hs  GitEncode.hs  VText.hs
